# ndindex

./: .buildinfo  .coveragerc  .doctr-files  .gitattributes  .gitignore  .travis.yml  Cargo.toml  MANIFEST.in  README.md  api.html  asv.conf.json  changelog.html  codecov.yml  conftest.py  genindex.html  github_deploy_key_quansight_labs_ndindex.enc  github_deploy_key_quansight_ndindex.enc  index.html  ndindex.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements-dev.txt  rever.xsh  run_doctests  search.html  searchindex.js  setup.cfg  setup.py  setup_simple_slice.py  simple_slice.py  simple_slice_cython.pyx  simple_slice_pybind11.cpp  simple_slice_rust.rs  simple_tuple.py  simple_tuple_cython.pyx  slices.html  style-guide.html  test_slice.py  (+6 more)
.circleci/: config.yml
.github/: dependabot.yml
_docs-1.3-release/: .doctr-files  index.html  search.html  searchindex.js
_docs-1.4-release/: .doctr-files  api.html  searchindex.js  style-guide.html  type-confusion.html
_docs-add-code-of-conduct/: .doctr-files  index.html  style-guide.html  type-confusion.html
_docs-as_subchunks-cases/: .doctr-files  changelog.html  genindex.html  searchindex.js  slices.html  style-guide.html  type-confusion.html
_docs-deshaw/: .doctr-files  api.html  changelog.html  genindex.html  index.html  search.html  searchindex.js  slices.html  style-guide.html  type-confusion.html
_docs-release/: .doctr-files  api.html  index.html  objects.inv  search.html  slices.html  style-guide.html
_docs-slice-docs/: .doctr-files  api.html  changelog.html  genindex.html  index.html  (+6 more)
(+319 files in other folders)
